# jasma-data-synthesizer-p1-v1

./: DataSynthesizer_main.py  README.md  pyproject.toml  quantum_forge_engine.py  requirements.txt  run_quantum_forge.py
jasma-data-synthesizer-p1-v1/: source_data.csv
