[tool.poetry]
name = "jasma-data-synthesizer-p1-v1"
version = "3.0.0"
description = "Advanced quantum-inspired data generation system for creating privacy-preserving synthetic datasets"
authors = ["Jasma Team <info@jasma.xyz>"]
license = "MIT"
readme = "README.md"
homepage = "jasma.xyz"
repository = "git@github.com:jasmadata/jasma-data-synthesizer-p1-v1.git"
keywords = ["quantum", "synthetic", "privacy", "machine-learning", "differential-privacy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
streamlit = "^1.30.0"
datasynthesizer = "^0.1.13"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = "^1.2.0"
plotly = "^5.13.0"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"
sphinx = "^7.0.1"
sphinx-rtd-theme = "^1.2.1"

[tool.poetry.scripts]
jasma-data-synthesizer-p1-v1 = "quantum_forge_engine:run_app"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
